--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -17,7 +17,7 @@ header {
     justify-content: space-between;
     gap: 20px;
     height: 50px;
-    padding: 12.5px 75px 0 75px;
+    padding: 12.5px 75px 12.5px 75px;
 }
 
 header > div {
@@ -51,7 +51,7 @@ nav ul {
     display: flex;
     gap: 50px;
     min-height: 100vh;
-    padding: 50px 150px 75px 75px;
+    padding: 50px 150px 100px 75px;
 }
 
 .home-page div:nth-child(1) {
@@ -96,7 +96,7 @@ nav ul {
 }
 
 .top-section {
-    background-image: url(../images/ramen.jpg);
+    background-image: url(../images/menu-page.jpg);
     background-size: cover;
     background-position: center;
     height: 550px;
@@ -108,19 +108,22 @@ nav ul {
     text-align: center;
     color: #ffffff;
     font-weight: 800;
-    padding: 30px 0 0 0;
+    padding: 20px 0 0 0;
+    font-style: italic;
 }
 
 .top-section p:first-child {
-    font-size: 60px;
-    border: 3px solid red;
+    font-size: 5rem;
+    font-style: normal;
 }
 
 .item {
     display: flex;
     margin: 30px;
-    background-color: rgb(117, 196, 238);
+    background-color: rgb(255, 255, 255, 0.21);
     height: 450px;
+    box-shadow: 12px 12px 12px #0c0c0c;
+    overflow: auto;
 }
 
 .item > div {
@@ -130,12 +133,13 @@ nav ul {
 .item-text-section {
     display: flex;
     flex-direction: column;
-    padding: 15px;
+    padding: 20px;
+    color: #ffffff;
 }
 
 .item-text-section div:nth-child(1) {
     flex: 0.1;
-    font-size: 40px;
+    font-size: 3.15rem;
     font-weight: 800;
     align-self: center;
 }
@@ -144,14 +148,23 @@ nav ul {
     flex: 1;
     display: flex;
     align-items: center;
-    font-size: 20px;
+    font-size: 1.4rem;
     text-align: center;
 }
 
 .item-img-section {
-    background-image: url(../images/ramen.jpg);
+    background-image: url(../images/sushi.jpg);
     background-size: cover;
     background-position: center;
+    padding: 0 20px;
+}
+
+.img-two {
+    background-image: url(../images/ramen.jpg);
+}
+
+.img-three {
+    background-image: url(../images/sake.jpg);
 }
 
 .contacts {
@@ -196,12 +209,11 @@ footer div {
 
     .item {
         flex-direction: column;
-        height: 650px;
+        height: 900px;
     }
 
     .item-reverse {
         flex-direction: column-reverse;
-        height: 650px;
     }
 
     .home-page div:nth-child(2) {
