--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -179,9 +179,13 @@ nav ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 5px;
+    padding: 30px;
     height: 100px;
-    border: 2px solid red;
+    border: 10px solid #c68e61;
+    box-shadow: 12px 12px 12px #0c0c0c;
+    font-size: 1.35rem;
+    font-weight: 700;
+    color: #ffffff;
 }
 
 footer {
