Finsih styling the header

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,6 +7,11 @@
     list-style: none;
 }
 
+@font-face {
+    font-family: 'Vintage';
+    src: url(/src/fonts/OverseerBold-DyzD.ttf);
+}
+
 body {
     background-color: #1d1f1c;
 }
@@ -18,13 +23,32 @@ header {
     gap: 20px;
     height: 50px;
     padding: 12.5px 75px 12.5px 75px;
+    background: #242623;
+    position: sticky;
+    top: 0px;
+    box-shadow: 0px 4px 10px #0c0c0c;
 }
 
 header > div {
     flex: 1;
     color: #c68e61;
-    font-size: 1.35rem;
     font-weight: 900;
+    display: flex;
+    align-items: center;
+}
+
+header > div > div:nth-child(1) {
+    font-size: 2.1rem;
+    font-style: italic;
+    font-family: 'Vintage', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
+}
+
+header > div > div:nth-child(2) {
+    width: 50px;
+    height: 50px;
+    background-image: url(../images/logo-img.png);
+    background-size: cover;
+    background-position: center;
 }
 
 nav {
